# keygen_re

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: cflod_common_shim.h
docs/: reverse-engineering-report.md  sdl-decouple-plan.md
scripts/: format.sh
src/: audio.c  audio.h  fc14player.h  font8x8.h  keygen.c  keygen.h  main.c  platform.h  platform_api.h  platform_api_hosted.c  platform_sdl2.c  render.c  render.h  types.h
src/resources/: render_data.h  resources.h
